Add experiment 00006: TinyStories E2E training
Self-contained CUDA training experiment with:
- All C/CUDA source included (no patching required)
- TinyStories dataset prep script
- Model creation script (7.3M param default)
- Checkpoint saving/loading support
- New flags: -e (model path), -c (checkpoint output), -k (checkpoint interval), -n (max steps)

Also updated .gitignore to allow tokenizer header files.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 **/*credential*
 **/*token*
 !**/token*.py  # Allow files about tokenization
+!**/token*.h   # Allow tokenizer headers
 
 # API keys patterns
 **/api_key*
