--- a/llm-fundamentals/dev/Makefile
+++ b/llm-fundamentals/dev/Makefile
@@ -3,15 +3,12 @@
 NVCC = nvcc
 NVCC_FLAGS = -O3 -lcublas -lm
 
-all: train train_banded train_banded_fc2 generate generate_banded
+all: train train_banded generate generate_banded
 
 train: src/train_gpt2_fp32.cu
 	$(NVCC) $(NVCC_FLAGS) -o $@ $<
 
 train_banded: src/train_gpt2_fp32_banded.cu
-	$(NVCC) $(NVCC_FLAGS) -o $@ $<
-
-train_banded_fc2: src/train_gpt2_fp32_banded_fc2.cu
 	$(NVCC) $(NVCC_FLAGS) -o $@ $<
 
 generate: src/generate.cu
@@ -21,7 +18,7 @@ generate_banded: src/generate_banded.cu
 	$(NVCC) $(NVCC_FLAGS) -o $@ $<
 
 clean:
-	rm -f train train_banded train_banded_fc2 generate generate_banded
+	rm -f train train_banded generate generate_banded
 
 # Setup: create venv and prepare data
 setup: venv data
@@ -38,16 +35,32 @@ model:
 	./venv/bin/python create_model.py
 
 # Run experiment: compare banded vs dense
+# Usage: make experiment
+#   -1 <int>  FC1 bandwidth (0 = dense)
+#   -2 <int>  FC2 bandwidth (0 = dense)
 experiment: train_banded data
 	@echo "=== Running Banded Sparsity Experiment ==="
 	@echo ""
-	@echo "Training BANDED (bandwidth=256, ~44% density)..."
-	./train_banded -e model.bin -c checkpoint_banded.bin -w 256 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded.txt
+	@echo "Training BANDED FC1+FC2 (bandwidth=256)..."
+	./train_banded -e model.bin -c checkpoint_banded.bin -1 256 -2 256 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded_fc1_fc2.txt
 	@echo ""
-	@echo "Training DENSE (100% density)..."
-	./train_banded -e model.bin -c checkpoint_dense.bin -d 1 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_dense.txt
+	@echo "Training DENSE (no sparsity)..."
+	./train_banded -e model.bin -c checkpoint_dense.bin -1 0 -2 0 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_dense.txt
 	@echo ""
 	@echo "=== Experiment Complete ==="
-	@echo "Compare log_banded.txt vs log_dense.txt"
+	@echo "Compare log_banded_fc1_fc2.txt vs log_dense.txt"
 
-.PHONY: all clean setup venv data model experiment
+# Additional experiments with different configurations
+experiment_fc1_only: train_banded data
+	@echo "Training BANDED FC1 only (bandwidth=256)..."
+	./train_banded -e model.bin -c checkpoint_fc1.bin -1 256 -2 0 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded_fc1.txt
+
+experiment_fc2_only: train_banded data
+	@echo "Training BANDED FC2 only (bandwidth=256)..."
+	./train_banded -e model.bin -c checkpoint_fc2.bin -1 0 -2 256 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded_fc2.txt
+
+experiment_asymmetric: train_banded data
+	@echo "Training BANDED FC1=128 FC2=512..."
+	./train_banded -e model.bin -c checkpoint_asym.bin -1 128 -2 512 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded_asym.txt
+
+.PHONY: all clean setup venv data model experiment experiment_fc1_only experiment_fc2_only experiment_asymmetric
