Add comprehensive test suites for banded sparsity, task position, checkpoint, and generate
Tests cover banded mask creation/density/gradient masking/post-update enforcement,
task_position loss masking with dlosses_mask verification, checkpoint save/load
round-trip with bit-exact parameter comparison, and generate.cu forward pass
determinism with PyTorch cross-validation. Also adds #ifndef TESTING guard to
generate.cu and a make test_all target.

--- a/llm-fundamentals/dev/.gitignore
+++ b/llm-fundamentals/dev/.gitignore
@@ -2,6 +2,10 @@
 train
 generate
 test_gpt2_fp32
+test_banded_sparsity
+test_task_position
+test_checkpoint
+test_generate
 
 # Checkpoints and model files
 checkpoint*.bin
