Add generalization testing framework: test set eval, seed control, gap tracking, comparison tooling
- dataloader.h: add seed parameter to dataloader_init (replaces hardcoded 42)
- train_gpt2_fp32.cu: add -x (test data) and -q (RNG seed) flags, logger_log_eval/logger_log_test,
  running avg train loss with gap logging at val steps, test set eval at final step
- prepare_data.py: 3-way split (shard 0=val, shard 1=test, rest=train)
- compare_runs.py: stdlib-only log comparison (summary, matched-step, matched-train-loss, gap trajectory)
- GENERALIZATION_PROTOCOL.md: standard procedure for multi-seed architecture comparisons
- Makefile: add compare target

--- a/llm-fundamentals/dev/Makefile
+++ b/llm-fundamentals/dev/Makefile
@@ -89,4 +89,7 @@ experiment_asymmetric: train data
 	@echo "Training BANDED FC1=128 FC2=512..."
 	./train -e model.bin -c checkpoint_asym.bin -1 128 -2 512 -n 2000 -b 16 -t 256 -v 200 -s 500 -o log_banded_asym.txt
 
-.PHONY: all clean setup venv data model test test_all experiment experiment_fc1_only experiment_fc2_only experiment_asymmetric
+compare:
+	./venv/bin/python compare_runs.py $(LOGS)
+
+.PHONY: all clean setup venv data model test test_all experiment experiment_fc1_only experiment_fc2_only experiment_asymmetric compare
