Add reproducible experiment workflow: build script, protocol, updated template
- build_from_tag.sh: worktree-based build from any git tag/commit
- EXPERIMENT_PROTOCOL.md: formal 3-phase checklist (prepare/run/record)
- Updated EXPERIMENT_README.md template with Source tag and Reproduction section
- Fixed .gitignore inline comments (gitignore doesn't support them)
- Tracked tokenizer.h (was silently ignored due to the gitignore bug)

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@
 **/*secret*
 **/*credential*
 **/*token*
-!**/token*.py  # Allow files about tokenization
-!**/token*.h   # Allow tokenizer headers
+# Allow files about tokenization
+!**/token*.py
+# Allow tokenizer headers
+!**/token*.h
 
 # API keys patterns
 **/api_key*
