Add W&B integration via Python wrapper (experiment 00013)
wandb_train.py wraps ./train via subprocess, parses structured stdout
(config table, train/val/test loss, throughput) and logs to W&B in
real-time. Degrades gracefully if wandb not installed. Zero C changes.

--- a/llm-fundamentals/dev/Makefile
+++ b/llm-fundamentals/dev/Makefile
@@ -52,7 +52,7 @@ setup: venv data
 venv:
 	python3 -m venv venv
 	./venv/bin/pip install --upgrade pip
-	./venv/bin/pip install tiktoken numpy requests tqdm torch
+	./venv/bin/pip install tiktoken numpy requests tqdm torch wandb
 
 data: venv
 	./venv/bin/python prepare_data.py
